// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flowchart-number-field Renders \`flowchart-number-field\` with custom props 1`] = `
<div
  class="layout justify-space-between align-center"
>
  <label
    aria-hidden="true"
    class="v-label theme--light"
    style="left: 0px; position: relative;"
  >
    Custom label
  </label>
  <div
    class="flex xs3"
  >
    <div
      class="v-input mt-0 pt-0 v-input--hide-details v-input--is-label-active v-input--is-dirty theme--light v-text-field v-select"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <div
                class="v-select__selection v-select__selection--comma"
              >
                12
              </div>
              <input
                aria-readonly="false"
                autocomplete="off"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              type="hidden"
              value="12"
            />
          </div>
          <div
            class="v-menu"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flowchart-number-field Renders \`flowchart-number-field\` with custom props 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active "
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8;"
>
  <div
    class="v-list v-select-list v-sheet theme--light theme--light"
    id="list-39"
    role="listbox"
    tabindex="-1"
  >
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-44-0"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          1
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-44-1"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          2
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-44-2"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          3
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-44-3"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          4
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-44-4"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          5
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-44-5"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          6
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-44-6"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          7
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-44-7"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          8
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-44-8"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          9
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-44-9"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          10
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-44-10"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          11
        </div>
      </div>
    </div>
    <div
      aria-selected="true"
      class="v-list-item primary--text v-list-item--active v-list-item--link theme--light v-list-item--highlighted"
      id="list-item-44-11"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          12
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-44-12"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          14
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-44-13"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          16
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-44-14"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          18
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-44-15"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          20
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-44-16"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          22
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-44-17"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          24
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-44-18"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          28
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-44-19"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          32
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flowchart-number-field Renders \`flowchart-number-field\` with default props 1`] = `
<div
  class="layout justify-space-between align-center"
>
  <label
    aria-hidden="true"
    class="v-label theme--light"
    style="left: 0px; position: relative;"
  />
  <div
    class="flex xs3"
  >
    <div
      class="v-input mt-0 pt-0 v-input--hide-details theme--light v-text-field v-select"
    >
      <div
        class="v-input__control"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          class="v-input__slot"
          role="button"
        >
          <div
            class="v-select__slot"
          >
            <div
              class="v-select__selections"
            >
              <input
                aria-readonly="false"
                autocomplete="off"
                readonly="readonly"
                type="text"
              />
            </div>
            <div
              class="v-input__append-inner"
            >
              <div
                class="v-input__icon v-input__icon--append"
              >
                <i
                  aria-hidden="true"
                  class="v-icon notranslate material-icons theme--light"
                >
                  arrow_drop_down
                </i>
              </div>
            </div>
            <input
              type="hidden"
            />
          </div>
          <div
            class="v-menu"
          >
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`flowchart-number-field Renders \`flowchart-number-field\` with default props 2`] = `
<div
  class="v-menu__content theme--light menuable__content__active "
  style="max-height: 304px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8;"
>
  <div
    class="v-list v-select-list v-sheet theme--light theme--light"
    id="list-9"
    role="listbox"
    tabindex="-1"
  >
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-14-0"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          1
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-14-1"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          2
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-14-2"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          3
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-14-3"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          4
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-14-4"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          5
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-14-5"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          6
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-14-6"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          7
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-14-7"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          8
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-14-8"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          9
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-14-9"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          10
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-14-10"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          11
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-14-11"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          12
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-14-12"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          14
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-14-13"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          16
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-14-14"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          18
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-14-15"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          20
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-14-16"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          22
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-14-17"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          24
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-14-18"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          28
        </div>
      </div>
    </div>
    <div
      aria-selected="false"
      class="v-list-item v-list-item--link theme--light"
      id="list-item-14-19"
      role="option"
      tabindex="0"
    >
      <div
        class="v-list-item__content"
      >
        <div
          class="v-list-item__title"
        >
          32
        </div>
      </div>
    </div>
  </div>
</div>
`;
